tests/ui/traits/const-traits/assoc-type-const-bound-usage-0.stderr
error[E0271]: type mismatch resolving `<T as Trait>::Assoc == T`
  --> $DIR/assoc-type-const-bound-usage-0.rs:14:5
   |
LL |     T::Assoc::func()
   |     ^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == T`
  --> $DIR/assoc-type-const-bound-usage-0.rs:18:5
   |
LL |     <T as Trait>::Assoc::func()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
